[Fix] profile url error and active-form introduction too high error, and LudoEdit redirect error

--- a/src/stylesheets/components/_report-form.scss
+++ b/src/stylesheets/components/_report-form.scss
@@ -92,6 +92,7 @@
     .introduction-and-tags--player {
         overflow: auto;
         background-color: $gray_text-field;
+        height: 80px;
         &::-webkit-scrollbar {
             width: 4px;
         }
